.archive/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
spec:
  ingressClassName: internal
  rules:
    - host: emqx.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                annotations:
                  io.cilium/lb-ipam-ips: 10.10.30.35
                name: emqx-dashboard
                port:
                  number: 18083
